--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.4.2",
     "native-base": "^3.4.28",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
+    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-numeric-input": "^1.9.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.0",
@@ -31,9 +35,10 @@
     "react-native-svg": "13.4.0",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swipeable-list-view": "^0.1.2",
-    "react-native-tab-view": "^3.5.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "^0.18.12",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
